Revert "removed sib script"
This reverts commit a4fe80a6f1aac2bdb7d4ed29bc32da64e67aca9b.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
 (function() {
     window.sib = {
         equeue: [],
@@ -33,7 +33,7 @@
         i = document.getElementsByTagName("script")[0];
     n.type = "text/javascript", n.id = "sendinblue-js", n.async = !0, n.src = "https://sibautomation.com/sa.js?key=" + window.sib.client_key, i.parentNode.insertBefore(n, i), window.sendinblue.page();
 })();
-</script>
+</script> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
